# wine-quality-prediction-modeling

./: .gitignore  README.md  dvc.yaml  model.dvc  pyproject.toml  requirements.txt  wine_study.ipynb
.dvc/: config
.github/workflows/: cml.yaml
data/: prepared.dvc  raw.dvc
dvclive/: metrics.json
dvclive/plots/metrics/: Mean Absolute Error.tsv  Root Mean Squared Error.tsv
metrics/: metrics.json
model/: .gitignore
tests/: test_prepare.py
wine_quality_prediction_modeling/: evaluate.py  prepare.py  train.py
